--- a/chapter-2.org
+++ b/chapter-2.org
@@ -594,6 +594,54 @@ Box-and-Pointer representation:
 Tree representation:
 #+INCLUDE: "2_24-tree-graph.dot" src dot :file 2_24-tree-graph.png
 
+* Exercise 2.25
+Give combinations of cars and cdrs that will pick 7 from each of the following lists:
+#+begin_src scheme :eval never
+(1 3 (5 7) 9)
+((7))
+(1 (2 (3 (4 (5 (6 7))))))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define a '(1 3 (5 7) 9))
+(define b '((7)))
+(define c '(1 (2 (3 (4 (5 (6 7)))))))
+
+(test-equal 7
+  (car (cdr (car (cdr (cdr a))))))
+(test-equal 7
+  (car (car b)))
+(test-equal 7
+  (car (cdr (car (cdr (car (cdr (car (cdr (car (cdr (car (cdr c)))))))))))))
+#+end_src
+
+* Exercise 2.26
+Suppose we define x and y to be two lists:
+#+begin_src scheme :eval never
+(define x (list 1 2 3))
+(define y (list 4 5 6))
+#+end_src
+What result is printed by the interpreter in response to evaluating each of the following expressions:
+#+begin_src scheme :eval never
+(append x y)
+(cons x y)
+(list x y)
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define x (list 1 2 3))
+(define y (list 4 5 6))
+
+(test-equal (append x y)
+  '(1 2 3 4 5 6))
+(test-equal (cons x y)
+  '((1 2 3) 4 5 6))
+(test-equal (list x y)
+  '((1 2 3) (4 5 6)))
+#+end_src
+
 * meta :noexport:
 #+PROPERTY: header-args :results output
 #+OPTIONS: todo:nil toc:nil num:nil
