--- a/chapter-2.org
+++ b/chapter-2.org
@@ -642,6 +642,47 @@ What result is printed by the interpreter in response to evaluating each of the 
   '((1 2 3) (4 5 6)))
 #+end_src
 
+* Exercise 2.27
+Modify your reverse procedure of Exercise 2.18 to produce a deep-reverse procedure that takes a list as argument and returns as its value the list with its elements reversed and with all sublists deep-reversed as well. For example,
+#+begin_src scheme :eval never
+(define x
+  (list (list 1 2) (list 3 4)))
+
+x
+((1 2) (3 4))
+
+(reverse x)
+((3 4) (1 2))
+
+(deep-reverse x)
+((4 3) (2 1))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (deep-reverse l)
+  (define (iter l result)
+    (cond ((null? l)
+           result)
+          ((not (pair? l))
+           l)
+          (else
+           (iter (cdr l) (cons (deep-reverse (car l)) result)))))
+  (iter l nil))
+
+(define x
+  (list (list 1 2) (list 3 4)))
+(test-equal
+    '((4 3) (2 1))
+  (deep-reverse x))
+(test-equal
+    '(1 2 3 4)
+  (deep-reverse '(4 3 2 1)))
+(test-equal
+    '((1) (2 3) 4)
+  (deep-reverse '(4 (3 2) (1))))
+#+end_src
+
 * meta :noexport:
 #+PROPERTY: header-args :results output
 #+OPTIONS: todo:nil toc:nil num:nil
