--- a/chapter-2.org
+++ b/chapter-2.org
@@ -665,25 +665,21 @@ x
 #+begin_src scheme
 (define (deep-reverse l)
   (define (iter l result)
-    (cond ((null? l)
-           result)
-          ((not (pair? l))
-           l)
+    (cond ((null? l) result)
+          ((not (pair? l)) l)
           (else
-           (iter (cdr l) (cons (deep-reverse (car l)) result)))))
+           (iter (cdr l)
+                 (cons (deep-reverse (car l)) result)))))
   (iter l nil))
 
 (define x
   (list (list 1 2) (list 3 4)))
-(test-equal
-    '((4 3) (2 1))
+(test-equal '((4 3) (2 1))
   (deep-reverse x))
-(test-equal
-    '(1 2 3 4)
+(test-equal '(1 2 3 4)
   (deep-reverse '(4 3 2 1)))
-(test-equal
-    '((1) (2 3) 4)
-  (deep-reverse '(4 (3 2) (1))))
+(test-equal '((1) (2 3) (4 (5 6)))
+  (deep-reverse '(((6 5) 4) (3 2) (1))))
 #+end_src
 
 * Exercise 2.28
@@ -705,7 +701,8 @@ Write a procedure fringe that takes as argument a tree (represented as a list) a
   (define (iter tree result)
     (if (not (pair? tree))
         (cons tree result)
-        (iter (car tree) (iter (car (cdr tree)) result))))
+        (iter (car tree)
+              (iter (car (cdr tree)) result))))
   (iter tree nil))
 
 (define x
