--- a/chapter-2.org
+++ b/chapter-2.org
@@ -836,6 +836,93 @@ How much do you need to change your programs to convert to the new representatio
 ;; branch-structure
 #+end_src
 
+* Exercise 2.30
+Define a procedure square-tree analogous to the square-list procedure of Exercise 2.21. That is, square-tree should behave as follows:
+#+begin_src scheme :eval never
+(square-tree
+ (list 1
+       (list 2 (list 3 4) 5)
+       (list 6 7)))
+(1 (4 (9 16) 25) (36 49))
+#+end_src
+Define square-tree both directly (i.e., without using any higher-order procedures) and also by using map and recursion.
+
+** Solution
+*** Direct solution
+#+begin_src scheme
+(define (square-tree tree)
+  (cond ((null? tree) nil)
+        ((not (pair? tree)) (* tree tree))
+        (else
+         (cons (square-tree (car tree))
+               (square-tree (cdr tree))))))
+
+(test-equal '(1 (4 (9 16) 25) (36 49))
+  (square-tree '(1 (2 (3 4) 5) (6 7))))
+#+end_src
+
+*** Map-based solution
+#+begin_src scheme
+(define (square-tree tree)
+  (map (lambda (subtree)
+         (if (pair? subtree)
+             (square-tree subtree)
+             (* subtree subtree)))
+       tree))
+
+(test-equal '(1 (4 (9 16) 25) (36 49))
+  (square-tree '(1 (2 (3 4) 5) (6 7))))
+#+end_src
+
+* Exercise 2.31
+Abstract your answer to Exercise 2.30 to produce a procedure tree-map with the property that square-tree could be defined as
+#+begin_src scheme :eval never
+(define (square-tree tree)
+  (tree-map square tree))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (tree-map fn tree)
+  (map (lambda (subtree)
+         (if (pair? subtree)
+             (square-tree subtree)
+             (fn subtree)))
+       tree))
+
+(define (square-tree tree)
+  (tree-map square tree))
+
+(test-equal '(1 (4 (9 16) 25) (36 49))
+  (square-tree '(1 (2 (3 4) 5) (6 7))))
+#+end_src
+
+* Exercise 2.32
+We can represent a set as a list of distinct elements, and we can represent the set of all subsets of the set as a list of lists. For example, if the set is (1 2 3), then the set of all subsets is (() (3) (2) (2 3) (1) (1 3) (1 2) (1 2 3)). Complete the following definition of a procedure that generates the set of subsets of a set and give a clear explanation of why it works:
+
+#+begin_src scheme :eval never
+(define (subsets s)
+  (if (null? s)
+      (list nil)
+      (let ((rest (subsets (cdr s))))
+        (append rest (map ⟨??⟩ rest)))))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (subsets s)
+  (if (null? s)
+      (list nil)
+      (let ((rest (subsets (cdr s))))
+        (append rest
+                (map (lambda (subset)
+                       (cons (car s) subset))
+                     rest)))))
+
+(test-equal '(() (3) (2) (2 3) (1) (1 3) (1 2) (1 2 3))
+  (subsets '(1 2 3)))
+#+end_src
+
 * meta :noexport:
 #+PROPERTY: header-args :results output
 #+OPTIONS: todo:nil toc:nil num:nil
