--- a/chapter-2.org
+++ b/chapter-2.org
@@ -588,12 +588,6 @@ The value returned by the call to for-each (not illustrated above) can be someth
  (list 57 321 88))
 #+end_src
 
-#+RESULTS:
-: 
-: 57
-: 321
-: 88
-
 Output
 #+begin_example
 57
@@ -921,6 +915,107 @@ We can represent a set as a list of distinct elements, and we can represent the 
 
 (test-equal '(() (3) (2) (2 3) (1) (1 3) (1 2) (1 2 3))
   (subsets '(1 2 3)))
+#+end_src
+
+* Exercise 2.33
+Fill in the missing expressions to complete the following definitions of some basic list-manipulation operations as accumulations:
+
+#+begin_src scheme :eval never
+(define (map p sequence)
+  (accumulate (lambda (x y) ⟨??⟩)
+              nil sequence))
+
+(define (append seq1 seq2)
+  (accumulate cons ⟨??⟩ ⟨??⟩))
+
+(define (length sequence)
+  (accumulate ⟨??⟩ 0 sequence))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (map p sequence)
+  (accumulate (lambda (x y) (cons (p x) y))
+              nil sequence))
+
+(define (append seq1 seq2)
+  (accumulate cons seq2 seq1))
+
+(define (length sequence)
+  (accumulate (lambda (x y) (inc y))
+              0 sequence))
+
+(test-equal '(1 4 9)
+  (map square '(1 2 3)))
+
+(test-equal '(1 2 3 4 5 6)
+  (append '(1 2 3) '(4 5 6)))
+
+(test-equal 3
+  (length '(1 2 3)))
+#+end_src
+
+* Exercise 2.34
+Evaluating a polynomial in $x$ at a given value of $x$ can be formulated as an accumulation. We evaluate the polynomial
+\[
+a_n x^n + a_{n−1}x^{n−1} + \cdots +a_1x + a_0
+\]
+using a well-known algorithm called Horner’s rule, which structures the computation as
+\[
+(\cdots(a_nx + a_{n−1})x + \cdots +a_1)x + a_0.
+\]
+In other words, we start with $a_n$, multiply by $x$, add $a_{n−1}$, multiply by $x$, and so on, until we reach $a_0$.
+
+Fill in the following template to produce a procedure that evaluates a polynomial using Horner’s rule. Assume that the coefficients of the polynomial are arranged in a sequence, from $a_0$ through
+
+#+begin_src scheme :eval never
+(define (horner-eval x coefficient-sequence)
+  (accumulate
+   (lambda (this-coeff higher-terms)
+     ⟨??⟩)
+   0
+   coefficient-sequence))
+#+end_src
+
+For example, to compute $1+3x+5x^3+x^5$ at $x=2$ you would evaluate
+
+#+begin_src scheme :eval never
+(horner-eval 2 (list 1 3 0 5 0 1))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (horner-eval x coefficient-sequence)
+  (accumulate
+   (lambda (this-coeff higher-terms)
+     (+ this-coeff (* x higher-terms)))
+   0
+   coefficient-sequence))
+
+(test-equal 79 (horner-eval 2 (list 1 3 0 5 0 1)))
+#+end_src
+
+* Exercise 2.35
+Redefine count-leaves from 2.2.2 as an accumulation:
+#+begin_src scheme :eval never
+(define (count-leaves t)
+  (accumulate ⟨??⟩ ⟨??⟩ (map ⟨??⟩ ⟨??⟩)))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (count-leaves t)
+  (accumulate
+   +
+   0
+   (map (lambda (x)
+          (if (not (pair? x))
+              1
+              (count-leaves x)))
+        t)))
+
+(test-equal 7
+  (count-leaves '(1 (2 3) ((4 5 (6)) 7))))
 #+end_src
 
 * meta :noexport:
