--- a/chapter-2.org
+++ b/chapter-2.org
@@ -1018,6 +1018,160 @@ Redefine count-leaves from 2.2.2 as an accumulation:
   (count-leaves '(1 (2 3) ((4 5 (6)) 7))))
 #+end_src
 
+* Exercise 2.36
+The procedure accumulate-n is similar to accumulate except that it takes as its third argument a sequence of sequences, which are all assumed to have the same number of elements. It applies the designated accumulation procedure to combine all the first elements of the sequences, all the second elements of the sequences, and so on, and returns a sequence of the results. For instance, if s is a sequence containing four sequences, ((1 2 3) (4 5 6) (7 8 9) (10 11 12)), then the value of (accumulate-n + 0 s) should be the sequence (22 26 30). Fill in the missing expressions in the following definition of accumulate-n:
+#+begin_src scheme :eval never
+(define (accumulate-n op init seqs)
+  (if (null? (car seqs))
+      nil
+      (cons (accumulate op init ⟨??⟩)
+            (accumulate-n op init ⟨??⟩))))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (accumulate-n op init seqs)
+  (if (null? (car seqs))
+      nil
+      (cons (accumulate op init (map car seqs))
+            (accumulate-n op init (map cdr seqs)))))
+
+(test-equal '(22 26 30)
+  (accumulate-n + 0 '((1 2 3) (4 5 6) (7 8 9) (10 11 12))))
+#+end_src
+
+* Exercise 2.37
+Suppose we represent vectors $v = (v_i)$ as sequences of numbers, and matrices $m = (m_{ij})$ as sequences of vectors (the rows of the matrix). For example, the matrix
+
+\begin{pmatrix}
+1 & 2 & 3 & 4 \\
+4 & 5 & 6 & 6 \\
+6 & 7 & 8 & 9
+\end{pmatrix}
+
+is represented as the sequence ((1 2 3 4) (4 5 6 6) (6 7 8 9)). With this representation, we can use sequence operations to concisely express the basic matrix and vector operations. These operations (which are described in any book on matrix algebra) are the following:
+
+#+ATTR_HTML: :frame none 
+| (dot-product v w)     | returns the sum $\sum_i v_iw_i$;      |
+| (matrix-*-vector m v) | returns the vector $t$,               |
+|                       | where $t_i = \sum_j m_{ij}v_j$;       |
+| (matrix-*-matrix m n) | returns the matrix $p$,               |
+|                       | where $p_{ij} = \sum_k m_{ik}n_{kj}$; |
+| (transpose m)         | returns the matrix $n$,               |
+|                       | where $n_{ij} = m_{ji}$.              |
+
+We can define the dot product as
+
+#+begin_src scheme :eval never
+(define (dot-product v w)
+  (accumulate + 0 (map * v w)))
+#+end_src
+
+Fill in the missing expressions in the following procedures for computing the other matrix operations. (The procedure accumulate-n is defined in Exercise 2.36.)
+
+#+begin_src scheme :eval never
+(define (matrix-*-vector m v)
+  (map ⟨??⟩ m))
+
+(define (transpose mat)
+  (accumulate-n ⟨??⟩ ⟨??⟩ mat))
+
+(define (matrix-*-matrix m n)
+  (let ((cols (transpose n)))
+    (map ⟨??⟩ m)))
+#+end_src
+
+** Solution
+#+begin_src scheme
+;; given
+(define (dot-product v w)
+  (accumulate + 0 (map * v w)))
+
+;; actual solution
+(define (matrix-*-vector m v)
+  (map (lambda (w) (dot-product v w)) m))
+
+(define (transpose mat)
+  (accumulate-n cons nil mat))
+
+(define (matrix-*-matrix m n)
+  (let ((cols (transpose n)))
+    (map (lambda (v) (matrix-*-vector cols v)) m)))
+
+;; Tests
+(test-equal '(6 12 18)
+  (matrix-*-vector '((1 1 1) (2 2 2) (3 3 3))
+                   '(2 2 2)))
+
+(test-equal '((1 2 3) (1 2 3) (1 2 3))
+  (transpose '((1 1 1) (2 2 2) (3 3 3))))
+
+(test-equal '((88 9 26) (56 33 62))
+  (matrix-*-matrix '((11 3) (7 11))
+                   '((8 0 1) (0 3 5))))
+#+end_src
+
+* Exercise 2.38
+The accumulate procedure is also known as fold-right, because it combines the first element of the sequence with the result of combining all the elements to the right. There is also a fold-left, which is similar to fold-right, except that it combines elements working in the opposite direction:
+#+begin_src scheme :eval never
+(define (fold-left op initial sequence)
+  (define (iter result rest)
+    (if (null? rest)
+        result
+        (iter (op result (car rest))
+              (cdr rest))))
+  (iter initial sequence))
+#+end_src
+What are the values of
+
+#+begin_src scheme :eval never
+(fold-right / 1 (list 1 2 3))
+(fold-left  / 1 (list 1 2 3))
+(fold-right list nil (list 1 2 3))
+(fold-left  list nil (list 1 2 3))
+#+end_src
+Give a property that op should satisfy to guarantee that fold-right and fold-left will produce the same values for any sequence.
+
+** Solution
+Evaluation results
+#+begin_example
+$1 = 3/2
+$2 = 1/6
+$3 = (1 (2 (3 ())))
+$4 = (((() 1) 2) 3)
+#+end_example
+
+op must be associative in order to fold-left and fold-right to produce the same result.
+
+* Exercise 2.39
+Complete the following definitions of reverse (Exercise 2.18) in terms of fold-right and fold-left from Exercise 2.38:
+#+begin_src scheme :eval never
+(define (reverse sequence)
+  (fold-right
+   (lambda (x y) ⟨??⟩) nil sequence))
+
+(define (reverse sequence)
+  (fold-left
+   (lambda (x y) ⟨??⟩) nil sequence))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (reverse sequence)
+  (fold-right
+   (lambda (x y) (append y (list x))) nil sequence))
+
+(test-equal '(3 2 1)
+  (reverse '(1 2 3)))
+
+(define (reverse sequence)
+  (fold-left
+   (lambda (x y) (cons y x)) nil sequence))
+
+(test-equal '(6 5 4)
+  (reverse '(4 5 6)))
+#+end_src
+
 * meta :noexport:
 #+PROPERTY: header-args :results output
 #+OPTIONS: todo:nil toc:nil num:nil
